VACMS-1872: Prevent link and icon overlap. Refactor library.

--- a/docroot/modules/custom/va_gov_user/css/sections_accordion.css
+++ b/docroot/modules/custom/va_gov_user/css/sections_accordion.css
@@ -36,7 +36,7 @@
 }
 
 .item-list > ul.sections > li > a {
-  display: block;
+  display: inline-block;
   font-weight: bold;
   padding: 0.5rem;
 }
